--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -3,7 +3,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0; 
+  padding: 0;
 }
 
 body {
@@ -11,7 +11,16 @@ body {
   line-height: 1.4;
 }
 
-a{
+a {
   color: #333;
   text-decoration: none;
+}
+.mentorship-form {
+  border: solid black;
+  padding: 25px;
+  margin: 30px;
+}
+
+.next-button {
+  float: right;
 }
