--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -28,6 +28,12 @@ a {
   margin: 30px;
 }
 
+.Login {
+  border: solid black;
+  padding: 25px;
+  margin: 30px;
+}
+
 .NextButton-InMentor {
   float: right;
 }
