--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -89,6 +89,12 @@ td {
   padding-right: 20px;
 }
 
+tr:last-child {
+  border: solid;
+  border-width: 1px 0;
+  text-align: center;
+}
+
 .check {
   color: #52c41a;
 }
@@ -99,7 +105,7 @@ td {
 
 .user-icon {
   font-size: 30px;
-  padding: 10px;
+  padding: 8px;
 }
 
 .mentee-requests {
@@ -108,7 +114,7 @@ td {
 
 table {
   table-layout: auto;
-  width: 325px;
+  width: 350px;
 }
 
 /*COSC360 mentioned that it's good to be aware of sizing when it comes to various devices, 
