--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -111,6 +111,8 @@ tr:last-child {
 .mentee-requests {
   float: left;
   margin-bottom: 15px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 table {
