--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -55,8 +55,8 @@ p3 {
 }
 
 #logout_button {
-  position:absolute;
-  right:0;
+  position: absolute;
+  right: 0;
 }
 
 .MentorForm {
@@ -120,7 +120,8 @@ p4 {
 
 table,
 th {
-  border: 1px solid black;
+  border: 1px solid rgb(112, 111, 111);
+  background-color: rgb(239, 247, 247);
 }
 
 th {
@@ -134,7 +135,7 @@ td {
   padding-right: 20px;
 }
 
-tr:last-child {
+#request-row {
   border: solid;
   border-width: 1px 0;
   text-align: center;
