--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -28,10 +28,42 @@ p3 {
 .MentorTutorial,
 .MentorCompletion,
 .MenteeCompletion,
+.LandingPage,
 .ForgotPassword {
   border: solid black;
   padding: 25px;
   margin: 30px;
+}
+
+.container { 
+  width:100%; 
+  height:100%; 
+  padding-top:1%; 
+  padding-left:5%; 
+  padding-right:5%; 
+  padding-bottom: 5%;
+} 
+
+#adminLeft {
+  float:left; 
+  width:30%; 
+  height:80%; 
+  border:solid black; 
+}
+
+#mentorMiddle {
+  float:left; 
+  width:30%; 
+  height:80%; 
+  border:solid black; 
+  margin-left:5%; 
+}
+
+#menteeRight {
+  float:right; 
+  width:30%; 
+  height:80%; 
+  border:solid black; 
 }
 
 .Login {
