--- a/src/front-end/src/App.css
+++ b/src/front-end/src/App.css
@@ -17,14 +17,6 @@ a {
   text-decoration: none;
 }
 
-p1 {
-  font-size: 1.15em;
-}
-
-p3 {
-  font-size: 0.75em;
-}
-
 .MentorTutorial,
 .MentorCompletion,
 .MenteeCompletion,
@@ -35,20 +27,10 @@ p3 {
   margin: 30px;
 }
 
-.landingPage {
-  /*
-    If we want to use a border around this page:
-    border: solid black;
-    padding: 25px;
-    margin: 30px;
-
-    needed for formatting the landing page
-  */
-}
-
 .landing-icon {
   font-size: 125px;
 }
+
 .container {
   width: 100%;
   height: 100%;
@@ -58,8 +40,7 @@ p3 {
   padding-bottom: 5%;
 }
 
-#adminLeft {
-  float: left;
+.column {
   width: 30%;
   height: 80%;
   padding-top: 0.5%;
@@ -67,71 +48,36 @@ p3 {
   padding-left: 0.5%;
   padding-right: 0.5%;
   border: solid black;
+}
+
+#adminLeft {
+  float: left;
   box-shadow: 1px 8px 30px -2px #adc6ff inset, 5px 10px 10px #888888;
 }
 
 #mentorMiddle {
   float: left;
-  width: 30%;
-  height: 80%;
-  padding-top: 0.5%;
-  padding-bottom: 0.5%;
-  padding-left: 0.5%;
-  padding-right: 0.5%;
-  border: solid black;
   margin-left: 5%;
   box-shadow: 1px 8px 30px -2px #adc6ff inset, 5px 10px 10px #888888;
 }
 
 #menteeRight {
   float: right;
-  width: 30%;
-  height: 80%;
-  padding-top: 0.5%;
-  padding-bottom: 0.5%;
-  padding-left: 0.5%;
-  padding-right: 0.5%;
-  border: solid black;
   box-shadow: 1px 8px 30px -2px #adc6ff inset, 5px 10px 10px #888888;
-}
-
-.ManageMentors {
-  /*
-    needed for formating the manage mentors page
-  */
 }
 
 #CurrentActiveMentors {
   float: left;
-  width: 30%;
-  height: 80%;
-  padding-top: 0.5%;
-  padding-bottom: 0.5%;
-  padding-left: 0.5%;
-  padding-right: 0.5%;
-  border: solid black;
 }
 
 #InvitedPendingMentors {
   float: left;
-  width: 30%;
-  height: 80%;
-  padding-top: 0.5%;
-  padding-bottom: 0.5%;
-  padding-left: 0.5%;
-  padding-right: 0.5%;
-  border: solid black;
   margin-left: 5%;
 }
 
 #InviteTab {
   float: right;
-  width: 30%;
-  height: 80%;
-  padding-top: 0.5%;
-  padding-bottom: 0.5%;
-  padding-left: 0.5%;
-  padding-right: 0.5%;
+  border: none;
 }
 
 .Login {
@@ -140,6 +86,7 @@ p3 {
   margin-top: 150px;
   margin-left: 380px;
 }
+
 .AdminSignup,
 .MenteeForm,
 .MentorForm {
@@ -156,44 +103,15 @@ p3 {
   color: rgb(211, 211, 211);
 }
 
-#logout_button {
-  position: absolute;
-  right: 0;
-}
-
-p2 {
-  font-size: 1.15em;
-}
-
-p4 {
-  font-size: 0.75em;
-}
-
 .loginlink {
   color: blue;
 }
 
-table,
-th {
-  border: 1px solid rgb(112, 111, 111);
-  background-color: rgb(239, 247, 247);
-}
-
-th {
-  text-align: center;
-}
-
-td {
-  padding-left: 20px;
+#mentee-request-row {
+  padding-left: 40px;
   padding-bottom: 5px;
   padding-top: 5px;
   padding-right: 20px;
-}
-
-#request-row {
-  border: solid;
-  border-width: 1px 0;
-  text-align: center;
 }
 
 .check {
@@ -209,16 +127,11 @@ td {
   padding: 8px;
 }
 
-.mentee-requests {
+.mentee-card {
   float: left;
   margin-bottom: 15px;
   margin-left: 5px;
   margin-right: 5px;
-}
-
-table {
-  table-layout: auto;
-  width: 350px;
 }
 
 #accept {
